syntax = "proto3";
package command.v1;

message AddPeerRequest {
  string address = 1;
  optional string peer_id = 2;
}

message AddPeerResponse {
  string peer_id = 1;
}

message CreateTunnelServerRequest {
  string peer_id = 1;
  optional string address = 2;
}

message CreateTunnelServerResponse {
  string peer_id = 1;
  string address = 2;
}

message CreateEntranceRequest {
  string peer_id = 1;
}

message CreateEntranceResponse {
  string peer_id = 1;
  string address = 2;
}

service CommandService {
  rpc AddPeer(AddPeerRequest) returns (AddPeerResponse);
  rpc CreateTunnelServer(CreateTunnelServerRequest) returns (CreateTunnelServerResponse);
  rpc CreateEntrance(CreateEntranceRequest) returns (CreateEntranceResponse);
}
